# pywindfindr

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflow-templates/: pylint.yml  python-package.yml
.github/workflows/: pylint.yml  python-package.yml
src/windfindr/: __init__.py  utils.py
tests/: __init__.py
tests/windfindr/: __init__.py  test_init.py  test_utils.py
windfindr/: __init__.py
