[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pywindfindr"
description = "Library to communicate with the windfinder API"
requires-python = ">=3.6"
keywords = ["windfinder"]
license = {text = "MIT License"}
authors = [
    {name = "Wesley Menezes", email = "www.wesley@gmail.com"}
]
url = "https://github.com/w35l3y/pywindfindr/"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
]
dependencies = ["requests"]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["windfindr"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "windfindr.__version__"}
readme = {file = ["README.md"]}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"