[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywindfindr"
description = "Library to communicate with the windfinder API"
requires-python = ">=3.9"
keywords = ["windfinder"]
license = { file="LICENSE" }
authors = [
    {name = "Wesley Menezes", email = "www.wesley@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["httpx"]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://github.com/w35l3y/pywindfindr"
"Bug Tracker" = "https://github.com/w35l3y/pywindfindr/issues"

[tool.setuptools.dynamic]
version = {attr = "windfindr.__version__"}
readme = {file = ["README.md"]}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"